# regularization

./: CMakeLists.txt  main.cpp  regularizer.hpp
shaders/: accumulation.frag  accumulation.vert  deformation.comp  gaussian_kernel_x.comp  gaussian_kernel_y.comp  integral_columns.comp  integral_image.comp  regularization.comp  upper_left_integral_triangle.comp  upper_right_integral_triangle.comp
